--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "triafly",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
