--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "triafly",
   "version": "1.0.5",
   "description": "",
-  "main": "./build/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/fimfei/triafly/issues"
   },
-  "homepage": "https://github.com/fimfei/triafly#readme"
+  "homepage": "https://github.com/fimfei/triafly#readme",
+  "dependencies": {
+    "@babel/preset-react": "^7.25.9"
+  }
 }
