--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
   "bugs": {
     "url": "https://github.com/fimfei/triafly/issues"
   },
-  "homepage": "https://github.com/fimfei/triafly#readme",
+  "homepage": "https://github.com/fimfei/triafly#readme"
 }
