--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "triafly",
-  "version": "1.0.32",
+  "version": "1.0.33",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fimfei/triafly.git"
