--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "triafly",
-  "version": "1.0.38",
+  "version": "1.0.39",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/fimfei/triafly/issues"
   },
-  "homepage": "https://github.com/fimfei/triafly#readme"
+  "homepage": "https://github.com/fimfei/triafly#readme",
+  "dependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "babel-loader": "^9.2.1"
+  }
 }
