--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "triafly",
-  "version": "1.0.41",
+  "version": "1.0.42",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,5 +23,13 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
     "babel-loader": "^9.2.1"
+  },
+  "peerDependencies": {
+    "react": ">=16.0.0",
+    "react-dom": ">=16.0.0",
+    "react-router-dom": ">=6.0.0",
+    "react-scripts": ">=5.0.0",
+    "sass": ">=1.0.0",
+    "sass-loader": ">=14.0.0"
   }
 }
