--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "triafly",
-  "version": "1.0.42",
+  "version": "1.0.43",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,12 +18,6 @@
     "url": "https://github.com/fimfei/triafly/issues"
   },
   "homepage": "https://github.com/fimfei/triafly#readme",
-  "dependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
-    "babel-loader": "^9.2.1"
-  },
   "peerDependencies": {
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0",
@@ -31,5 +25,11 @@
     "react-scripts": ">=5.0.0",
     "sass": ">=1.0.0",
     "sass-loader": ">=14.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "babel-loader": "^9.2.1"
   }
 }
