--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "triafly",
-  "version": "1.0.49",
+  "version": "1.0.54",
   "description": "...description...",
   "main": "dist/bundle.js",
   "scripts": {
@@ -11,7 +11,11 @@
     "type": "git",
     "url": "git+https://github.com/fimfei/triafly.git"
   },
-  "keywords": ["react", "npm", "package"],
+  "keywords": [
+    "react",
+    "npm",
+    "package"
+  ],
   "author": "...автор...",
   "license": "MIT",
   "bugs": {
@@ -19,12 +23,26 @@
   },
   "homepage": "https://github.com/fimfei/triafly#readme",
   "peerDependencies": {
+    "axios": "^1.3.2",
+    "css-loader": "^7.1.2",
+    "dagre": "^0.8.5",
+    "date-fns": "^3.6.0",
+    "less": "^4.1.1",
+    "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
+    "moment": "^2.30.1",
     "react": ">=16.0.0",
+    "react-color": "^2.19.3",
+    "react-datepicker": "^7.2.0",
+    "react-dnd": "^16.0.0",
+    "react-dnd-html5-backend": "^16.0.0",
     "react-dom": ">=16.0.0",
     "react-router-dom": ">=6.0.0",
     "react-scripts": ">=5.0.0",
-    "sass": ">=1.0.0",
-    "sass-loader": ">=14.0.0"
+    "reactflow": "^11.8.3",
+    "sass": "^1.58.0",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
