--- a/package.json
+++ b/package.json
@@ -1,55 +1,39 @@
 {
   "name": "triafly",
-  "version": "1.0.61",
-  "description": "...description...",
-  "main": "dist/bundle.js",
+  "version": "1.0.76",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fimfei/triafly.git"
   },
-  "keywords": [
-    "react",
-    "npm",
-    "package"
-  ],
   "author": "...автор...",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/fimfei/triafly/issues"
   },
   "homepage": "https://github.com/fimfei/triafly#readme",
-  "peerDependencies": {
-    "axios": "^1.3.2",
-    "css-loader": "^7.1.2",
-    "dagre": "^0.8.5",
-    "date-fns": "^3.6.0",
-    "less": "^4.1.1",
-    "mobx": "^6.7.0",
-    "mobx-react": "^7.6.0",
-    "moment": "^2.30.1",
-    "react": ">=16.0.0",
-    "react-color": "^2.19.3",
-    "react-datepicker": "^7.2.0",
-    "react-dnd": "^16.0.0",
-    "react-dnd-html5-backend": "^16.0.0",
-    "react-dom": ">=16.0.0",
-    "react-router-dom": ">=6.0.0",
-    "react-scripts": ">=5.0.0",
-    "reactflow": "^11.8.3",
-    "sass": "^1.58.0",
-    "sass-loader": "^14.2.1",
-    "style-loader": "^4.0.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@rollup/plugin-commonjs": "^21.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "rollup": "^2.0.0",
+    "rollup-plugin-babel": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.0"
+  },
+  "perDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
