--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
   "name": "triafly",
-  "version": "1.0.76",
-  "main": "dist/index.js",
+  "version": "1.0.102",
+  "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "build": "rollup -c",
+    "build": "vite build",
     "prepublishOnly": "npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fimfei/triafly.git"
-  },
-  "author": "...автор...",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fimfei/triafly/issues"
-  },
-  "homepage": "https://github.com/fimfei/triafly#readme",
-  "devDependencies": {
-    "babel-loader": "^8.0.0",
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
-    "@rollup/plugin-commonjs": "^21.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "rollup": "^2.0.0",
-    "rollup-plugin-babel": "^4.0.0",
-    "rollup-plugin-peer-deps-external": "^2.0.0",
-    "rollup-plugin-postcss": "^4.0.0"
-  },
-  "perDependencies": {
+  "peerDependencies": {
+    "axios": "^1.3.2",
+    "css-loader": "^7.1.2",
+    "dagre": "^0.8.5",
+    "date-fns": "^3.6.0",
+    "less": "^4.1.1",
+    "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-color": "^2.19.3",
+    "react-datepicker": "^7.2.0",
+    "react-dnd": "^16.0.0",
+    "react-dnd-html5-backend": "^16.0.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": ">=6.0.0",
+    "react-scripts": ">=5.0.0",
+    "reactflow": "^11.8.3",
+    "sass": "^1.58.0",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@vitejs/plugin-react": "^1.0.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "sass": "^1.80.6",
+    "vite": "^2.0.0"
   }
 }
