--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,3 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": [
-    [
-      "module-resolver",
-      {
-        "alias": {
-          "@": "D:/apps/sampleapp/src/netdb-rspa/netdb_rspa/src"
-        }
-      }
-    ]
-  ]
+  "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
