--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "less-loader": "^12.2.0",
     "sass": "^1.80.6",
     "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "core-js": "^3.40.0",
+    "regenerator-runtime": "^0.14.1"
   }
 }
