--- a/package.json
+++ b/package.json
@@ -29,17 +29,15 @@
     "style-loader": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.0.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@vitejs/plugin-react": "^1.0.0",
+    "core-js": "^3.40.0",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
+    "regenerator-runtime": "^0.14.1",
     "sass": "^1.80.6",
     "vite": "^5.4.10"
-  },
-  "dependencies": {
-    "core-js": "^3.40.0",
-    "regenerator-runtime": "^0.14.1"
   }
 }
