--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.80.6",
     "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   }
 }
